[gd_scene load_steps=18 format=3 uid="uid://c55p6w4jrrart"]

[ext_resource type="Texture2D" uid="uid://dnjl5yl4jxokn" path="res://icon.svg" id="1_v4g0s"]
[ext_resource type="Script" path="res://code/World.gd" id="2_s22jq"]
[ext_resource type="Texture2D" uid="uid://cdd7bjcqarms1" path="res://art/pause.png" id="3_pinjd"]
[ext_resource type="Texture2D" uid="uid://dchwdrff5mbj6" path="res://art/play.png" id="4_xwssj"]
[ext_resource type="Texture2D" uid="uid://tk7qy826mwcp" path="res://art/erase.png" id="5_f64wx"]
[ext_resource type="Texture2D" uid="uid://dcrv2udty7ck2" path="res://art/text.png" id="6_7lr8u"]
[ext_resource type="Theme" uid="uid://bmdj0ftoa7fnd" path="res://art/new_theme.tres" id="7_jafrv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_adqfn"]
texture = ExtResource("1_v4g0s")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_fx4g8"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_adqfn")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uvjpe"]
texture = ExtResource("1_v4g0s")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_gjuvl"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_uvjpe")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fo5jw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cjay1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_amdd2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tmq5o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_44hep"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a0trq"]
texture = ExtResource("6_7lr8u")

[node name="World" type="TileMap"]
scale = Vector2(0.125, 0.125)
tile_set = SubResource("TileSet_fx4g8")
format = 2
script = ExtResource("2_s22jq")

[node name="WorldUpdate" type="TileMap" parent="."]
visible = false
scale = Vector2(0.25, 0.25)
tile_set = SubResource("TileSet_gjuvl")
format = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2, 2)

[node name="PlayButton" type="CheckButton" parent="GUI/Control"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 40.0
tooltip_text = "Plays or pauses the game."
theme_override_icons/checked = ExtResource("3_pinjd")
theme_override_icons/unchecked = ExtResource("4_xwssj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fo5jw")

[node name="EraseButton" type="Button" parent="GUI/Control"]
layout_mode = 0
offset_left = 40.0
offset_right = 84.0
offset_bottom = 40.0
tooltip_text = "Erases all living cells."
theme_override_styles/normal = SubResource("StyleBoxEmpty_cjay1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_amdd2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tmq5o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_44hep")
icon = ExtResource("5_f64wx")
icon_alignment = 1

[node name="DelayText" type="LineEdit" parent="GUI/Control"]
layout_mode = 0
offset_left = 86.0
offset_top = 3.5
offset_right = 150.0
offset_bottom = 35.5
tooltip_text = "The number of seconds between generations."
theme_override_colors/font_color = Color(0.356863, 0.356863, 1, 1)
theme_override_colors/font_outline_color = Color(0.517647, 0.517647, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_a0trq")
alignment = 1
max_length = 6

[node name="AliveRuleItems" type="ItemList" parent="GUI/Control"]
offset_left = 6.0
offset_top = 44.0
offset_right = 38.0
offset_bottom = 268.0
tooltip_text = "The rules for how many neighbors a living cell needs to stay alive."
theme = ExtResource("7_jafrv")
theme_override_colors/font_color = Color(0.678431, 0.678431, 1, 1)
theme_override_colors/font_hovered_color = Color(0.678431, 0.678431, 1, 1)
theme_override_colors/font_selected_color = Color(0.678431, 0.678431, 1, 1)
theme_override_colors/font_outline_color = Color(0.356863, 0.356863, 1, 1)
theme_override_colors/guide_color = Color(0.356863, 0.356863, 1, 1)
theme_override_constants/outline_size = 4
select_mode = 1
allow_rmb_select = true
item_count = 8
item_0/text = "1"
item_1/text = "2"
item_2/text = "3"
item_3/text = "4"
item_4/text = "5"
item_5/text = "6"
item_6/text = "7"
item_7/text = "8"

[node name="DeadRuleItems" type="ItemList" parent="GUI/Control"]
offset_left = 45.5
offset_top = 44.0
offset_right = 77.5
offset_bottom = 268.0
tooltip_text = "The rules for how many neighbors a dead cell needs to come to life."
theme = ExtResource("7_jafrv")
select_mode = 1
allow_rmb_select = true
item_count = 8
item_0/text = "1"
item_1/text = "2"
item_2/text = "3"
item_3/text = "4"
item_4/text = "5"
item_5/text = "6"
item_6/text = "7"
item_7/text = "8"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="toggled" from="GUI/Control/PlayButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="GUI/Control/EraseButton" to="." method="_on_erase_button_pressed"]
[connection signal="text_submitted" from="GUI/Control/DelayText" to="." method="_on_delay_text_text_submitted"]
[connection signal="item_clicked" from="GUI/Control/AliveRuleItems" to="." method="_on_alive_rule_items_item_clicked"]
[connection signal="item_clicked" from="GUI/Control/DeadRuleItems" to="." method="_on_dead_rule_items_item_clicked"]
